fix for border collapse and accesibiltity fix in fsi templat

--- a/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/topic/content.less
+++ b/ui.apps/src/main/content/jcr_root/apps/guides-components/clientlibs/clientlib-hfm/clientlib-base-fsi/css/topic/content.less
@@ -130,6 +130,7 @@ html.adobeguides-text-size {
       .gu-custom-container {
         .col-6grid {
           border-top: unset;
+          border-bottom: unset;
         }
       }
     }
